fixed overflow and make contribute text smaller

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,9 +1,11 @@
 html, body {
     overflow-x: hidden;
     
+    
   }
   body {
-    position: relative
+    position: relative;
+    overflow: visible;
   }
 
   html, body{
